fix(avatar): aligns avatar letters to centre of avatar background

--- a/src/styles/rt-base-theme.scss
+++ b/src/styles/rt-base-theme.scss
@@ -20,6 +20,9 @@
 }
 // AVATAR
 .rt-avatar-avatar {
+  @extend %flex-row;
+  @extend %flex-align-center;
+  @extend %flex-justify-center;
   flex-shrink: 0;
 }
 
